# PG-PeParser

./: CMakeLists.txt  README.md
Documentations/: Documentation.docx
PY_GUI/: CMakeLists.txt  DataStructures.py  FunctionWrapper.py  main.py
PeParser/: Allocator.h  CMakeLists.txt  Concepts.h  DataStructures.h  Declarations.h  ExplicitTemplateInstances.h  GetPEB.h  Include.h  Iterable.h  Offsets.h  PeParser.cpp  PeParser.h  Preprocessor.h  Python_wrapper.h  Templates.h
PeParser/PEParserDLL/: PEParserCDLL.cpp  PEParserCPPDLL.cpp  Test.cpp
PeParser/Python_wrapper/: .def  Dummy.cpp  LINKEREXPORT.h  Python_wrapper.cpp  expliciteInstance.h
Planung/: EntwicklungsumgebungTechstack.docx  Gant-Diagramm.xlsx  Lastenheft.docx  Projektdokumentation.docx  Projektziel.docx  soll-analyse.docx  soll-ist-analyse.docx
